--- a/styles.css
+++ b/styles.css
@@ -29,10 +29,10 @@ a:hover {
   background-image: url("./images/name.jpg");
 }
 .continue-bg {
-  background-image: url("./images/pexels-pixabay-163036.jpg");
+  background-image: url("./images/continue2.jpg");
 }
-.restup-bg {
-  background-image: url("../images/bigtree.jpg");
+.rest-bg {
+  background-image: url("./images/bigtree.jpg");
 }
 .climbover-bg {
   background-image: url("./images/pexels-pixabay-163036.jpg");
