--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ a:hover {
   background-image: url("./images/name.jpg");
 }
 .continue-bg {
-  background-image: url("./images/continue2.jpg");
+  background-image: url("./images/continue.jpg");
 }
 .rest-bg {
   background-image: url("./images/bigtree.jpg");
